# lossmodels

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: aggregate.md  coverage.md  credibility.md  empirical.md  estimation.md  examples.md  frequency.md  index.md  severity.md
examples/: credibility_example.py  deductible_example.py  fit_and_compare_models.py  fit_and_simulate.py  layer_example.py  limit_example.py  panjer_vs_fft_vs_simulation.py  panjer_vs_simulation.py  stop_loss_example.py
src/lossmodels/aggregate/: __init__.py  base.py  collective.py  discretization.py  fft.py  panjer.py  risk_measures.py  risk_measures_pmf.py
src/lossmodels/coverage/: __init__.py  deductible.py  layer.py  limit.py
src/lossmodels/credibility/: __init__.py  buhlmann.py  buhlmann_straub.py
src/lossmodels/empirical/: __init__.py  distribution.py
src/lossmodels/estimation/: __init__.py  diagnostics.py  frequency_selection.py  mle.py  model_selection.py  moments.py
src/lossmodels/frequency/: __init__.py  base.py  binomial.py  geometric.py  negbinomial.py  poisson.py
src/lossmodels/severity/: __init__.py  base.py  exponential.py  gamma.py  lognormal.py  pareto.py  weibull.py
tests/aggregate/: test_base_risk_methods.py  test_collective.py  test_discretization.py  test_fft.py  test_panjer.py  test_risk_measures.py  test_risk_measures_pmf.py
tests/coverage/: test_coverage_means.py  test_deductible.py  test_layer.py  test_limit.py
tests/credibility/: test_buhlmann.py  test_buhlmann_straub.py
tests/empirical/: test_distribution.py
tests/estimation/: test_diagnostics.py  test_frequency_selection.py  test_mle.py  test_model_selection.py  test_moments.py  test_poisson_zero_data.py
tests/frequency/: test_binomial.py  test_negbinomial.py  test_poisson.py  test_poisson_zero_lambda.py
tests/integration/: test_end_to_end.py
tests/severity/: test_exponential.py  test_gamma.py  test_lognormal.py  test_pareto.py  test_weibull.py
