[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lossmodels"
version = "0.1.0"
description = "A Python library for actuarial loss modeling."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Michael Bryant" }
]
dependencies = [
    "numpy",
    "scipy"
]

[tool.setuptools.packages.find]
where = ["src"]