[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lossmodels"
version = "0.1.2"
description = "A Python library for actuarial loss modeling using frequency-severity methods."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Michael Bryant" }
]
keywords = [
    "actuarial",
    "insurance",
    "risk",
    "statistics",
    "simulation",
    "loss modeling",
    "frequency severity"
]

dependencies = [
    "numpy>=1.22",
    "scipy>=1.8"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

[project.urls]
Homepage = "https://github.com/michaelabryant/lossmodels"
Repository = "https://github.com/michaelabryant/lossmodels"
Issues = "https://github.com/michaelabryant/lossmodels/issues"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: marks tests as slow"]